--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                 <div id="chat-content" class="mt-8">
                     <div class="glass-morphism rounded-2xl p-6">
                         <h2 class="text-2xl font-bold mb-4">AI CHAT</h2>
-                        <iframe src="https://chat.hix.ai/claude/claude-3-haiku" class="w-full h-[600px] rounded-xl" allowfullscreen></iframe>
+                        <iframe src="https://deepai.org/chat" class="w-full h-[600px] rounded-xl" allowfullscreen></iframe>
                     </div>
                 </div>
 
