--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="th">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,17 +7,27 @@
     <link rel="icon" href="https://img5.pic.in.th/file/secure-sv1/IMG_076653e98b38560f08f3.jpeg" type="image/jpeg">
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap');
 
-        /* Loading Animation */
+        body, html {
+            margin: 0;
+            padding: 0;
+            overflow-x: hidden;
+            background: linear-gradient(135deg, #0f1020, #1a1a2e, #16213e);
+            color: #e9e9e9;
+            font-family: 'Inter', sans-serif;
+        }
+
+        /* Loader Animation */
         #loader {
             position: fixed;
             top: 0;
             left: 0;
             width: 100%;
             height: 100%;
-            background-color: #2c2c2c;
+            background: linear-gradient(135deg, #0f1020, #1a1a2e, #16213e);
             display: flex;
             justify-content: center;
             align-items: center;
@@ -54,56 +63,83 @@
         }
 
         @keyframes blink {
-            0%, 100% {
-                transform: scaleY(1);
-            }
-            45%, 55% {
-                transform: scaleY(0.1);
-            }
+            0%, 100% { transform: scaleY(1); }
+            45%, 55% { transform: scaleY(0.1); }
         }
 
         @keyframes move-pupil {
-            0%, 100% {
-                transform: translate(-50%, -50%) scale(1);
-            }
-            25% {
-                transform: translate(-40%, -40%) scale(0.8);
-            }
-            50% {
-                transform: translate(-60%, -60%) scale(0.9);
-            }
-            75% {
-                transform: translate(-50%, -50%) scale(1);
-            }
+            0%, 100% { transform: translate(-50%, -50%) scale(1); }
+            25% { transform: translate(-40%, -40%) scale(0.8); }
+            50% { transform: translate(-60%, -60%) scale(0.9); }
+            75% { transform: translate(-50%, -50%) scale(1); }
         }
 
-        body {
-            font-family: 'Inter', system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
-            background: linear-gradient(to bottom right, #3c3c3c, #2c2c2c);
-            color: #f0f0f0;
-            min-height: 100vh;
-            overscroll-behavior: none;
+        /* Particle Background */
+        #particles-js {
+            position: fixed;
+            width: 100%;
+            height: 100%;
+            z-index: -1;
         }
 
-        .glass-morphism {
-            background: rgba(80, 80, 80, 0.3);
-            backdrop-filter: blur(10px);
-            border: 1px solid rgba(120, 120, 120, 0.2);
-        }
-
-        .hover-scale {
+        /* Holographic Hover Effect */
+        .holographic-card {
             transition: all 0.3s ease;
+            position: relative;
+            overflow: hidden;
         }
 
-        .hover-scale:hover {
-            transform: scale(1.03);
-            box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.5);
+        .holographic-card::before {
+            content: '';
+            position: absolute;
+            top: -50%;
+            left: -50%;
+            width: 200%;
+            height: 200%;
+            background: radial-gradient(circle at center, 
+                rgba(255,255,255,0.2) 0%, 
+                rgba(255,255,255,0) 70%);
+            transform: rotate(-45deg);
+            opacity: 0;
+            transition: opacity 0.5s ease;
+        }
+
+        .holographic-card:hover::before {
+            opacity: 1;
+        }
+
+        .holographic-card:hover {
+            transform: scale(1.05);
+            box-shadow: 0 25px 50px rgba(0,0,0,0.3);
+        }
+
+        /* Circuit Animation */
+        .circuit-overlay {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            pointer-events: none;
+            z-index: 10;
+            opacity: 0.2;
+        }
+
+        .circuit-line {
+            position: absolute;
+            background: linear-gradient(to right, #00ffff, #00ff00);
+            height: 1px;
+            animation: circuit-animate 5s infinite alternate;
+        }
+
+        @keyframes circuit-animate {
+            0% { opacity: 0.1; transform: scaleX(0); }
+            100% { opacity: 0.5; transform: scaleX(1); }
         }
     </style>
 </head>
-
-<body class="bg-gray-800">
-    <!-- Loading Screen -->
+<body>
+    <!-- Loader -->
     <div id="loader">
         <div class="eye-container">
             <div class="eye">
@@ -115,11 +151,17 @@
         </div>
     </div>
 
-    <div id="app" class="min-h-screen">
+    <!-- Particles Background -->
+    <div id="particles-js"></div>
+
+    <!-- Circuit Overlay -->
+    <div class="circuit-overlay" id="circuit-overlay"></div>
+
+    <div class="relative z-20">
         <!-- Navigation -->
-        <nav class="fixed top-0 left-0 right-0 z-50 glass-morphism py-4">
+        <nav class="fixed top-0 left-0 right-0 z-50 bg-opacity-30 backdrop-blur-lg py-4">
             <div class="max-w-6xl mx-auto flex justify-between items-center px-4">
-                <div class="text-2xl font-bold tracking-tight">AI PANUWAT</div>
+                <div class="text-2xl font-bold tracking-tight text-cyan-300">AI PANUWAT</div>
             </div>
         </nav>
 
@@ -127,53 +169,53 @@
         <div class="pt-20 max-w-6xl mx-auto px-4">
             <!-- Menu Grid -->
             <div id="menu" class="grid md:grid-cols-2 lg:grid-cols-4 gap-6">
-                <div onclick="navigate('chat')" class="glass-morphism rounded-2xl p-6 cursor-pointer hover-scale">
+                <div onclick="navigate('chat')" class="holographic-card bg-gray-800 bg-opacity-50 rounded-2xl p-6 cursor-pointer">
                     <div class="text-4xl mb-4">💬</div>
-                    <h3 class="text-xl font-semibold">AI PANUWAT</h3>
-                    <p class="text-gray-300 mt-2">กำลังพัฒนา..</p>
+                    <h3 class="text-xl font-semibold text-cyan-300">AI PANUWAT</h3>
+                    <p class="text-gray-400 mt-2">กำลังพัฒนา..</p>
                 </div>
-                <div onclick="navigate('server')" class="glass-morphism rounded-2xl p-6 cursor-pointer hover-scale">
+                <div onclick="navigate('server')" class="holographic-card bg-gray-800 bg-opacity-50 rounded-2xl p-6 cursor-pointer">
                     <div class="text-4xl mb-4">🖥️</div>
-                    <h3 class="text-xl font-semibold">SERVER</h3>
-                    <p class="text-gray-300 mt-2">Monitor server streams</p>
+                    <h3 class="text-xl font-semibold text-cyan-300">SERVER</h3>
+                    <p class="text-gray-400 mt-2">Monitor server streams</p>
                 </div>
-                <div onclick="navigate('internet')" class="glass-morphism rounded-2xl p-6 cursor-pointer hover-scale">
+                <div onclick="navigate('internet')" class="holographic-card bg-gray-800 bg-opacity-50 rounded-2xl p-6 cursor-pointer">
                     <div class="text-4xl mb-4">🌐</div>
-                    <h3 class="text-xl font-semibold">INTERNET</h3>
-                    <p class="text-gray-300 mt-2">Connection monitoring</p>
+                    <h3 class="text-xl font-semibold text-cyan-300">INTERNET</h3>
+                    <p class="text-gray-400 mt-2">Connection monitoring</p>
                 </div>
-                <div onclick="navigate('school-system')" class="glass-morphism rounded-2xl p-6 cursor-pointer hover-scale">
+                <div onclick="navigate('school-system')" class="holographic-card bg-gray-800 bg-opacity-50 rounded-2xl p-6 cursor-pointer">
                     <div class="text-4xl mb-4">🏫</div>
-                    <h3 class="text-xl font-semibold">เช็คระบบโรงเรียน</h3>
-                    <p class="text-gray-300 mt-2">ระบบจัดการโรงเรียน</p>
+                    <h3 class="text-xl font-semibold text-cyan-300">เช็คระบบโรงเรียน</h3>
+                    <p class="text-gray-400 mt-2">ระบบจัดการโรงเรียน</p>
                 </div>
             </div>
 
             <!-- Content Sections -->
             <div id="chat-content" class="mt-8">
-                <div class="glass-morphism rounded-2xl p-6">
-                    <h2 class="text-2xl font-bold mb-4">AI CHAT</h2>
+                <div class="holographic-card bg-gray-800 bg-opacity-50 rounded-2xl p-6">
+                    <h2 class="text-2xl font-bold mb-4 text-cyan-300">AI CHAT</h2>
                     <iframe src="https://deepai.org/chat" class="w-full h-[600px] rounded-xl" allowfullscreen></iframe>
                 </div>
             </div>
 
             <div id="server-content" class="hidden mt-8">
-                <div class="glass-morphism rounded-2xl p-6">
-                    <h2 class="text-2xl font-bold mb-4">SERVER</h2>
+                <div class="holographic-card bg-gray-800 bg-opacity-50 rounded-2xl p-6">
+                    <h2 class="text-2xl font-bold mb-4 text-cyan-300">SERVER</h2>
                     <iframe src="https://vdo.ninja/?view=ie7VQBu" class="w-full h-[500px] rounded-xl" allowfullscreen></iframe>
                 </div>
             </div>
 
             <div id="internet-content" class="hidden mt-8">
-                <div class="glass-morphism rounded-2xl p-6">
-                    <h2 class="text-2xl font-bold mb-4">LIVE</h2>
+                <div class="holographic-card bg-gray-800 bg-opacity-50 rounded-2xl p-6">
+                    <h2 class="text-2xl font-bold mb-4 text-cyan-300">LIVE</h2>
                     <iframe src="https://vdo.ninja/?view=Diqkfuu&bitrate=30000" class="w-full h-[500px] rounded-xl" allowfullscreen></iframe>
                 </div>
             </div>
 
             <div id="school-system-content" class="hidden mt-8">
-                <div class="glass-morphism rounded-2xl p-6">
-                    <h2 class="text-2xl font-bold mb-4">เช็คระบบโรงเรียน</h2>
+                <div class="holographic-card bg-gray-800 bg-opacity-50 rounded-2xl p-6">
+                    <h2 class="text-2xl font-bold mb-4 text-cyan-300">เช็คระบบโรงเรียน</h2>
                     <iframe src="https://clickcloudschool.com/" class="w-full h-[600px] rounded-xl" allowfullscreen></iframe>
                 </div>
             </div>
@@ -181,7 +223,7 @@
     </div>
 
     <script>
-        // Loading Animation
+        // Loader Animation
         window.addEventListener('load', () => {
             const loader = document.getElementById('loader');
             loader.style.opacity = '0';
@@ -190,7 +232,40 @@
             }, 1000);
         });
 
-        // Navigation
+        // Particle Background Configuration
+        particlesJS('particles-js', {
+            particles: {
+                number: { value: 80, density: { enable: true, value_area: 800 } },
+                color: { value: '#00ffff' },
+                shape: { type: 'circle' },
+                opacity: { value: 0.5, random: false },
+                size: { value: 3, random: true },
+                line_linked: { enable: true, distance: 150, color: '#00ffff', opacity: 0.4, width: 1 },
+                move: { enable: true, speed: 2, direction: 'none', random: false, straight: false, out_mode: 'out', bounce: false }
+            },
+            interactivity: {
+                detect_on: 'canvas',
+                events: { onhover: { enable: true, mode: 'repulse' } },
+                modes: { repulse: { distance: 100, duration: 0.4 } }
+            }
+        });
+
+        // Circuit Line Animation
+        function createCircuitLines() {
+            const overlay = document.getElementById('circuit-overlay');
+            for (let i = 0; i < 20; i++) {
+                const line = document.createElement('div');
+                line.classList.add('circuit-line');
+                line.style.top = `${Math.random() * 100}%`;
+                line.style.left = `-10%`;
+                line.style.width = `${Math.random() * 120}%`;
+                line.style.animationDelay = `${Math.random() * 5}s`;
+                overlay.appendChild(line);
+            }
+        }
+        createCircuitLines();
+
+        // Navigation Function
         function navigate(section) {
             ['chat', 'server', 'internet', 'school-system'].forEach(sec => {
                 document.getElementById(`${sec}-content`).classList.add('hidden');
@@ -207,5 +282,4 @@
         };
     </script>
 </body>
-
 </html>
