--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
             <!-- School System Section -->
             <div id="school-section" class="cyber-section rounded-xl p-6 hidden">
                 <h2 class="text-2xl font-bold mb-4 text-red-400">SCHOOL SYSTEM</h2>
-                <iframe src="https://clickcloudschool.com/" class="w-full h-[600px] rounded-xl"></iframe>
+                <iframe src="https://clickcloudschool.com/dashboard" class="w-full h-[600px] rounded-xl"></iframe>
             </div>
         </div>
     </div>
