--- a/index.html
+++ b/index.html
@@ -35,33 +35,92 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background: var(--dark-background);
+            background: linear-gradient(45deg, var(--dark-background), #1A1A2E);
             display: flex;
             justify-content: center;
             align-items: center;
             z-index: 9999;
-            perspective: 1000px;
+            overflow: hidden;
         }
 
-        .ai-loader {
+        .loader-container {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            text-align: center;
+        }
+
+        .ai-loader-advanced {
+            width: 250px;
+            height: 250px;
+            position: relative;
+            perspective: 1000px;
+            animation: float 3s ease-in-out infinite alternate;
+        }
+
+        .ai-loader-advanced::before,
+        .ai-loader-advanced::after {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            border-radius: 50%;
+            background: rgba(255, 51, 102, 0.2);
+            animation: pulse 2s infinite alternate;
+        }
+
+        .ai-loader-advanced::after {
+            animation-delay: 1s;
+        }
+
+        .ai-loader-core {
             width: 200px;
             height: 200px;
-            border: 3px solid var(--primary-red);
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            background: linear-gradient(135deg, var(--primary-red), var(--secondary-red));
             border-radius: 50%;
-            position: relative;
-            animation: 
-                rotate 3s infinite linear,
-                pulse 2s infinite alternate;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            box-shadow: 
+                0 0 30px rgba(255, 51, 102, 0.5),
+                inset 0 0 20px rgba(0,0,0,0.5);
+            animation: spin 4s linear infinite;
         }
 
-        @keyframes rotate {
-            0% { transform: rotateY(0deg) rotateX(0deg); }
-            100% { transform: rotateY(360deg) rotateX(360deg); }
+        .loader-text {
+            color: white;
+            font-size: 1.5rem;
+            margin-top: 20px;
+            text-transform: uppercase;
+            letter-spacing: 4px;
+            opacity: 0;
+            animation: fadeIn 2s forwards;
+        }
+
+        @keyframes spin {
+            0% { transform: translate(-50%, -50%) rotate(0deg); }
+            100% { transform: translate(-50%, -50%) rotate(360deg); }
+        }
+
+        @keyframes float {
+            0% { transform: translateY(0); }
+            100% { transform: translateY(-20px); }
         }
 
         @keyframes pulse {
-            0% { transform: scale(0.95); }
-            100% { transform: scale(1.05); }
+            0% { transform: scale(0.9); opacity: 0.6; }
+            100% { transform: scale(1.1); opacity: 0.8; }
+        }
+
+        @keyframes fadeIn {
+            0% { opacity: 0; transform: translateY(20px); }
+            100% { opacity: 1; transform: translateY(0); }
         }
 
         /* Glitch Effect */
@@ -105,9 +164,21 @@
     </style>
 </head>
 <body class="min-h-screen">
-    <!-- AI Loader -->
+    <!-- Enhanced AI Loader -->
     <div id="loader">
-        <div class="ai-loader"></div>
+        <div class="loader-container">
+            <div class="ai-loader-advanced">
+                <div class="ai-loader-core">
+                    <svg width="100" height="100" viewBox="0 0 100 100" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M50 10L65 35H35L50 10Z" fill="white" />
+                        <path d="M50 90L35 65H65L50 90Z" fill="white" />
+                        <path d="M10 50L35 35V65L10 50Z" fill="white" />
+                        <path d="M90 50L65 65V35L90 50Z" fill="white" />
+                    </svg>
+                </div>
+            </div>
+            <div class="loader-text">AI Panuwat System Loading</div>
+        </div>
     </div>
 
     <!-- Main Container -->
@@ -179,9 +250,12 @@
         window.addEventListener('load', () => {
             const loader = document.getElementById('loader');
             setTimeout(() => {
+                loader.style.transition = 'opacity 1s ease-out';
                 loader.style.opacity = '0';
-                loader.style.visibility = 'hidden';
-            }, 2000);
+                setTimeout(() => {
+                    loader.style.visibility = 'hidden';
+                }, 1000);
+            }, 3000);
         });
 
         // Section Navigation
